syntax = "proto3";

option go_package = "github.com/misachi/raft/protos/requestvote";

service RequestVote {
    rpc GetVote(RequestVoteDetail) returns (RequestVoteResponse);
}

message RequestVoteDetail {
    int64 term = 1;
    int64 lastLogIndex = 2;
    int64 lastLogTerm = 3;
    string candidateId = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}

service AppendEntry {
    rpc AddEntry (AppendEntryRequestDetail) returns (AppendEntryResponse);
}

message AppendEntryRequestDetail {
    int64 term = 1;
    int64 prevLogIndex = 2;
    int64 prevLogTerm = 3;
    string leaderId = 4;

    message Entry {
        int32 id = 1;
        int64 term = 2;
        bytes command = 3;
    }

    repeated Entry entry = 5;
}

message AppendEntryResponse {
    int64 term = 1;
    bool success = 2;
}
